Made the decks more memory efficient Changed the json and the reading of the decks accordingly